--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
 	"main": "server.js",
 	"scripts": {
 		"start": "node backend/server.js",
-		"server": "nodemon backend/server.js"
+		"server": "nodemon backend/server.js",
+		"client": "npm start --prefix frontend"
 	},
 	"author": "VladC",
 	"license": "MIT",
@@ -22,3 +23,4 @@
 		"nodemon": "^2.0.19"
 	}
 }
+
