--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
 	"scripts": {
 		"start": "node backend/server.js",
 		"server": "nodemon backend/server.js",
-		"client": "npm start --prefix frontend"
+		"client": "npm start --prefix frontend",
+		"dev": "concurrently \"npm run server\" \"npm run client\""
 	},
 	"author": "VladC",
 	"license": "MIT",
 	"dependencies": {
 		"bcryptjs": "^2.4.3",
 		"colors": "^1.4.0",
-		"dotenv": "^16.0.1",
-		"express": "^4.18.1",
+		"dotenv": "^15.0.0",
+		"express": "^4.17.2",
 		"express-async-handler": "^1.2.0",
 		"jsonwebtoken": "^8.5.1",
-		"mongoose": "^6.5.2"
+		"mongoose": "^6.1.9"
 	},
 	"devDependencies": {
+		"concurrently": "^7.3.0",
 		"nodemon": "^2.0.19"
 	}
 }
